# seu-compiler

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.bat  gen_docs.bat  test.bat
Frontend/: ast_dot.cpp  ast_dot.h  ast_format.cpp  ast_format.h  ast_printer.cpp  ast_printer.h  ast_walk.h  compile_pipeline.cpp  compile_pipeline.h  ir.cpp  ir.h  ir_opt.cpp  ir_opt.h  irgen.cpp  irgen.h  main_front.cpp  symbol.cpp  symbol.h  token_names.cpp  type.cpp  type.h  typecheck.cpp  typecheck.h
SeuLex/: CodeGenerator.cpp  CodeGenerator.h  DFAConverter.cpp  DFAConverter.h  DFAMinimizer.cpp  DFAMinimizer.h  LexFileParser.cpp  LexFileParser.h  NFAConstructor.cpp  NFAConstructor.h  RegExpParser.cpp  RegExpParser.h  lex_common.h  lex_main.cpp
SeuYacc/: code_gen.cpp  common.cpp  first_set.cpp  grammar.cpp  lalr.cpp  lr1_dfa.cpp  parsing_table.cpp  token_registry.inl  yacc_common.h  yacc_main.cpp
config/: Doxyfile
examples/: bad_call.c  bad_continue_switch.c  bad_empty_return.c  bad_missing_return.c  bad_return_type.c  bad_string_int.c  bad_undef.c  bad_void_return.c  block_scope.c  dup_case.c  for_loop.c  logic_ops.c  string_test.c  test.c
grammar/: lex.l  yacc.y
include/: ast.h  common_defs.h  seulex.h  token_names.h  tokens.def
